Fix modal z-indexing

--- a/src/assets/elements/EndGameModal/EndGameModal.scss
+++ b/src/assets/elements/EndGameModal/EndGameModal.scss
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1000;
 
   .modal-bg {
     position: absolute;
@@ -16,7 +17,7 @@
   }
 
   .modal {
-    z-index: 1000;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     gap: 2px;
